[project]
name = "triage-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-core>=0.3.0",
    "langgraph>=1.2.9",
    "pydantic>=2.0",
    "pygithub>=2.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (flake8 core, includes unused-import/unused-variable)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
files = ["graph", "tests", "main.py"]
