[project]
name = "triage-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "e2b>=1.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    # Pinned exactly: 1.91+ requires compiling a Rust/PyO3 bridge with no
    # macOS wheel and no Python 3.14 support yet. 1.90.0 is the last pure
    # Python (py3-none-any) release; only its pricing-table lookup is used
    # here, not its completion/routing layer. Bump once upstream ships a
    # compatible wheel.
    "litellm==1.90.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "detect-secrets>=1.5.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "lefthook>=1.9",
    "pip-audit>=2.10.1",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
# Required by py-cov-action/python-coverage-comment-action: paths recorded
# relative to the repo root rather than absolute, so coverage data collected
# on the CI runner is meaningful when the action re-reads it.
relative_files = true
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (flake8 core, includes unused-import/unused-variable)
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "N",     # pep8-naming
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "PT",    # flake8-pytest-style
    "DTZ",   # flake8-datetimez (no naive datetimes)
    "ASYNC", # flake8-async (relevant once FastAPI handlers exist)
    "ARG",   # flake8-unused-arguments
    "PERF",  # perflint
    "TID",   # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
# assert is idiomatic in pytest; test fixtures (including fake credentials)
# aren't a security surface
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
# Whole-project coverage: don't allowlist specific paths (that silently stops
# checking new code, e.g. when api/ or tools/ stop being empty) — exclude only
# what should never be checked instead.
include = ["."]
exclude = ["**/__pycache__", ".venv", "**/node_modules", "**/.*"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"
# Third-party libs (e.g. langgraph) have incomplete py.typed coverage across
# their own submodules; this only concerns library stub completeness, not
# type coverage of our own code, so it's not worth failing strict mode over.
reportMissingTypeStubs = false
